# select-box

./: .env.production.example  .gitignore  DEPLOY-1PANEL.md  DEPLOY.md  README.md  all-list.ods  docker-compose.prod.yml  docker-compose.yml  env.docker.example  package.json
backend/: .dockerignore  .env.example  Dockerfile  requirements.txt
frontend/: .dockerignore  .env.example  .npmrc  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
publisher/: .env.example  .gitignore  README.md  pyproject.toml
publisher/avan_publisher/: __init__.py  __main__.py  cli.py  config.py
publisher/avan_publisher/api/: __init__.py  client.py  models.py
publisher/avan_publisher/channels/: __init__.py  basalam.py  base.py  digikala.py  instagram.py  telegram.py  torob.py  website.py
publisher/avan_publisher/core/: context.py  pipeline.py  registry.py  store.py  sync.py
publisher/avan_publisher/web/: app.py  routes.py  schemas.py
publisher/avan_publisher/web/static/: index.html
publisher/avan_publisher/web/static/assets/: index-BTx0e_rO.css  index-Dh7u2OcA.js
publisher/config/: channels.yaml
publisher/tests/: test_registry.py
publisher/web/: index.html  package-lock.json  package.json  vite.config.ts
publisher/web/src/: App.tsx  index.css
publisher/web/src/components/: Layout.tsx
publisher/web/src/lib/: StatusBadge.tsx  api.ts  utils.ts
publisher/web/src/pages/: ChannelsPage.tsx  DashboardPage.tsx  HistoryPage.tsx  ProductsPage.tsx  PublishPage.tsx
scripts/: check-admin.sh  check-deploy.sh  (+10 more)
(+332 files in other folders)
