[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avan-publisher"
version = "0.1.0"
description = "Local publishing app for CORALAY — sync products and distribute to sales channels"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "typer[all]>=0.15.0",
    "rich>=13.9.0",
    "sqlalchemy>=2.0.36",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[project.scripts]
avan-publisher = "avan_publisher.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["avan_publisher"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
